--- a/client/template.html
+++ b/client/template.html
@@ -7,11 +7,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <div class="container">
-        <img id="laughImg"></img>
-        <h3>Don't Laugh Challenge</h3>
-        <div id="joke" class="joke"></div>
-        <button id="jokeBtn" class="btn">Get Another Joke</button>
+    <div id='root' class="container">
     </div>
 </body>
 </html>
